# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/solutions/: day01.rs  day02.rs  dayXX.rs  mod.rs  template.rs
src/utils/: input.rs  mod.rs
